# TII

./: .gitignore  FIXES_SPAWN_COLLISION.md  FIXES_SUMMARY_FINAL.md  GLOBAL_PLANNING_FIX.md  INSTALL.md  INVISIBLE_OBSTACLES_FIX.md  MAP9_FIX_SUMMARY.md  MAP9_REMOVE_PREDEFINED_OBSTACLES.md  MAP9_REPLACE_CYLINDERS_WITH_BOXES.md  OBSTACLE_FIXES_SUMMARY.md  P0_REMOTE_CODEX_HANDOFF.md  RANDOM_OBSTACLES_IMPLEMENTATION.md  RANDOM_OBSTACLES_USAGE.md  README.md  SPAWN_PERFORMANCE_OPTIMIZATION.md  STATIC_OBSTACLE_CLEANUP_FIX.md  STATIC_OBSTACLE_SPAWN_BUGFIX.md  debug_done_signal.py  environment.yml  kill_all_ros.sh  p0_server_bundle_20260719.tar.gz.sha256  push_to_github.sh  quick_comparison.sh  quick_gif_test.sh  record_screen.sh  requirements.txt  run_bc_orca_dwa_tune_map1.sh  run_curriculum.sh  run_e2e_curriculum.sh  run_intent_mappo_train.sh  run_intent_mappo_train_map5.sh  run_msa3c_curriculum_train.sh  run_option_test.sh  run_parallel.sh  run_rl_only.sh  run_sfl_curriculum.sh  run_test.sh  send_goals.sh  send_multi_goals.sh  send_single_goal.sh  (+12 more)
TII/: TII.eps  references.bib  tii-articles-template.aux  tii-articles-template.bbl  tii-articles-template.blg  tii-articles-template.fdb_latexmk  tii-articles-template.fls  tii-articles-template.tex
curriculum_logs/: curriculum_log_20260115_172323.jsonl  (+10 more)
install/gnn_bc_tools/share/gnn_bc_tools/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/start_rl_environment_tb3/: CMakeLists.txt  README.md
src/start_rl_environment_tb3/description/: turtlebot3_burger.urdf.xacro
src/start_rl_environment_tb3/launch/: main.launch.py  spawn_robots.launch.py  start_robots.launch.py  start_world.launch.py
src/start_rl_environment_tb3/maps/: corridor_swap.yaml  interaction_hub.pgm  interaction_hub.yaml  interaction_hub_mini.pgm  intersection.yaml  map2.pgm  warehouse_aisles.yaml  warehouse_dynamic.pgm  warehouse_dynamic.yaml
src/start_rl_environment_tb3/models/ground_plane/: model.sdf
src/start_rl_environment_tb3/scripts/: obstacle_mover.py  warehouse_obstacle_spawner.py
src/start_rl_environment_tb3/worlds/: corridor_swap.world  interaction_hub_mini.world  intersection.world  map2.world  warehouse_aisles.world  warehouse_dynamic.world  warehouse_random.world
(+458 files in other folders)
