<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gnn_bc_tools</name>
  <version>0.1.0</version>
  <description>BC data collection and pretraining tools for GNN-MAPPO using ORCA/DWA experts.</description>
  <maintainer email="wj@todo.todo">wj</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>gnn_marl_training</exec_depend>
  <exec_depend>start_orca_nav</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
